[package]
name = "dogshaiters"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", features = ["webgl2"] }
rand = "0.8.5"
wasm-bindgen = "0.2.83"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
